--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "CokysDayCare",
-  "app_id": "",
+  "app_id": "53244df6",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
